[package]
name = "shakemyleg"
description = "A simple state machine definition language and interpreter."
repository = "https://github.com/cbosoft/sml"
license = "MIT"
version = "2.4.0"
edition = "2021"
authors = ["Christopher Boyle"]

[dependencies]
itertools = "0.13.0"
json = "0.12.4"
lazy_static = "1.5.0"
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.62"

[features]
thread_safe = []
